--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vsc-ttt",
 	"displayName": "vsc-ttt",
 	"description": "Yet another modeless Japanese input for VS Code",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.32.0"
 	},
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.dottt"
+		"onCommand:extension.dottt",
+		"onCommand:extension.tttOnClipboard"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -18,6 +19,10 @@
 			{
 				"command": "extension.dottt",
 				"title": "Ttt: Do Ttt"
+			},
+			{
+				"command": "extension.tttOnClipboard",
+				"title": "Ttt: Ttt On Clipboard"
 			}
 		],
 		"keybindings": [
@@ -26,6 +31,12 @@
 				"key": "alt+j",
 				"mac": "cmd+j",
 				"when": "editorTextFocus"
+			},
+			{
+				"command": "extension.tttOnClipboard",
+				"key": "ctrl+j",
+				"mac": "cmd+j",
+				"when": "!editorTextFocus"
 			}
 		]
 	},
@@ -37,10 +48,13 @@
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
-		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
+		"@types/mocha": "^2.2.42",
+		"@types/node": "^10.14.4",
+		"tslint": "^5.16.0",
+		"typescript": "^3.4.3",
+		"vscode": "^1.1.28"
+	},
+	"dependencies": {
+		"clipboardy": "^2.0.0"
 	}
 }
