--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vsc-ttt",
 	"displayName": "vsc-ttt",
 	"description": "Yet another modeless Japanese input for VS Code",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"engines": {
 		"vscode": "^1.32.0"
 	},
@@ -54,7 +54,5 @@
 		"typescript": "^3.4.3",
 		"vscode": "^1.1.28"
 	},
-	"dependencies": {
-		"clipboardy": "^2.0.0"
-	}
+	"dependencies": {}
 }
