--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
 	"name": "vsc-ttt",
 	"displayName": "vsc-ttt",
+	"publisher": "yoyuse",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yoyuse/vsc-ttt.git"
+	},
+	"icon": "images/icon.png",
 	"description": "Yet another modeless Japanese input for VS Code",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"engines": {
 		"vscode": "^1.32.0"
 	},
